discussion/kv_engine/183329/183329_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Add QuotaSharingItemPager

Added a new subclass of ItemPager which evicts items from a set of
buckets and stops eviction when sum(mem_used) < sum(low_wat).

Changed the ItemPager factory method to return an instance of the
QuotaSharingItemPager which is shared between quota sharing
configurations.

The QuotaSharingItemPager's schedulePagingVisitors implementation uses
the CrossBucketVisitorAdapter to schedule paging visitors for all
buckets sharing HT quotas.

The adapter round-robins which bucket's paging visitor gets to run.
This is done to avoid evicting more items from buckets which have more
items resident below the MFU eviction threshold (HTs more densely
populated with such items, which would be faster to evict from if we
were just running the visitors concurrently without syncronisation).

Change-Id: I5c285db14e438cf159cde181de91b838549b706a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-12-14 10:11:06.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-14 10:44:04.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22180/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:250:46: error: no member named "accumulate" in namespace "std" [clang-diagnostic-error]
    std::size_t estimatedTotalMemUsed = std::accumulate(
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.h:48:39: warning: "virtual" is redundant since the function is already declared "override" [modernize-use-override]
    virtual std::chrono::microseconds maxExpectedDuration() const override;
    ~~~~~~~~                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.h:54:28: warning: "virtual" is redundant since the function is already declared "override" [modernize-use-override]
    virtual EvictionRatios getEvictionRatios(
    ~~~~~~~~               ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22180/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:250:46:
error: no member named "accumulate" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22180/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51484/ : FAILURE

Failure of GoogleTest "MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc/UnmeteredByPrivilege":

<pre>
[ RUN      ] MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc/UnmeteredByPrivilege
unknown file: error: C++ exception with description "Failed to create pipe for AtomicNotificationQueue9: bad file descriptor" thrown in SetUp().
[  FAILED  ] MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc/UnmeteredByPrivilege, where GetParam() = 4-byte object <01-00 00-00> (4 ms)
MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc/UnmeteredByPrivilege
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51484/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43221/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:250:46:
error: no member named "accumulate" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43221/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/936/ : FAILURE

Failure of GoogleTest "TwoBucketQSPagingTest.BucketsCanStealQuota":

<pre>
[ RUN      ] TwoBucketQSPagingTest.BucketsCanStealQuota
[2022-12-14T10:26:04.607Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/tests/testapp_cluster/quota_sharing_paging_test.cc:283: Failure
[2022-12-14T10:26:04.607Z] Expected equality of these values:
[2022-12-14T10:26:04.607Z]   expedctedMemUsage
[2022-12-14T10:26:04.607Z]     Which is: 33324800
[2022-12-14T10:26:04.607Z]   getMemStats(0).current
[2022-12-14T10:26:04.607Z]     Which is: 33461144
[2022-12-14T10:26:04.607Z] [  FAILED  ] TwoBucketQSPagingTest.BucketsCanStealQuota (4407 ms)
TwoBucketQSPagingTest.BucketsCanStealQuota
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/936/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11897/ : FAILURE

Compile error at [2022-12-14T10:16:04.811Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:250:46:
error: no member named "accumulate" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11897/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23737/ : FAILURE

Failure of GoogleTest "SDPerf/SubdocPerfTest.Dict_Add_Fulldoc/Mcbp_JsonNo":

<pre>
[ RUN      ] SDPerf/SubdocPerfTest.Dict_Add_Fulldoc/Mcbp_JsonNo
[2022-12-14T10:28:24.048Z] unknown file: Failure
[2022-12-14T10:28:24.048Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 10000ms for a response for SET" thrown in the test body.
[2022-12-14T10:28:24.048Z] [  FAILED  ] SDPerf/SubdocPerfTest.Dict_Add_Fulldoc/Mcbp_JsonNo, where GetParam() = (Mcbp, 4-byte object <01-00 00-00>) (13525 ms)
SDPerf/SubdocPerfTest.Dict_Add_Fulldoc/Mcbp_JsonNo
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23737/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21761/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11987/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24635/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24220/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25499/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32639/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
